fixed blast overflow

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -21,7 +21,7 @@ a { color: white !important;}
 }
 
 .blast-container {
-  height: 300px;
+  /*height: 300px;*/
 }
 
 .header-full-name {
@@ -155,6 +155,12 @@ a { color: white !important;}
 .main-project-description {
   text-align: center;
   margin: 30px 20%;
+  font-family: 'Ranga', cursive;
+}
+
+.blast-description {
+  text-align: center;
+  margin: 30px 0;
   font-family: 'Ranga', cursive;
 }
 
